--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Chess 3D</title>
-    <style>
-        body { margin: 0; overflow: hidden; }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 
     <!-- دقت کن: همه اسکریپت‌ها defer دارن -->
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/controls/OrbitControls.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body></body>
 </html>
+
