--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <meta charset="UTF-8" />
-    <title>Chess 3D</title>
-    <link rel="stylesheet" href="./style.css">
-
-    <!-- دقت کن: همه اسکریپت‌ها defer دارن -->
-    <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/controls/OrbitControls.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script defer src="./script.js"></script>
+<meta charset="UTF-8">
+<title>Chess 3D Mortal</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body></body>
-</html>
+<body>
 
+<!-- فایل اصلی JS با ماژول -->
+<script type="module" src="script.js"></script>
+
+</body>
+</html>
