--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-<meta charset="UTF-8">
-<title>Chess 3D Mortal</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Chess 3D</title>
+  <style>body { margin: 0; overflow: hidden; }</style>
 </head>
 <body>
-
-<!-- فایل اصلی JS با ماژول -->
-<script type="module" src="script.js"></script>
+  <script type="module" src="script.js"></script>
 
 </body>
 </html>
